# sheep-dog-n-wolf-decomp

./: .gitmodules  CMakeLists.txt  readme.MD
include/win32-stubs/: windows.h
src/: RandomFunctionsIFound.cpp  RandomFunctionsIFound.h  globals.h  main.cpp  tracker.cpp
src/File/: FileFunctions.cpp  FileInfo.h
src/Strings/: StringFunctions.cpp  StringFunctions.h
src/Structs/: EngineState.h  structs.cpp
